; ModuleID = '/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_detect_fault_handling.c'
source_filename = "/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_detect_fault_handling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Using Intel TSX\0A\00", align 1
@TSX = common dso_local global i32 0, align 4
@config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@INFO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [42 x i8] c"No Intel TSX, fallback to signal handler\0A\00", align 1
@SIGNAL_HANDLER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @detect_fault_handling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @detect_fault_handling() #0 {
  %1 = call i64 (...) @check_tsx()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i32, i32* @SUCCESS, align 4
  %5 = call i32 @debug(i32 %4, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @TSX, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 0), align 4
  br label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @INFO, align 4
  %9 = call i32 @debug(i32 %8, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32, i32* @SIGNAL_HANDLER, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 0), align 4
  br label %11

11:                                               ; preds = %7, %3
  ret void
}

declare dso_local i64 @check_tsx(...) #1

declare dso_local i32 @debug(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
